@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -37,7 +36,7 @@ public class PetServiceImpl implements PetService {
         return persistencePort.findAll()
                 .stream()
                 .map(petMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
